--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca Articoli</title>
+    <title>Testicoli Variegati</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Biblioteca Articoli</h1>
-            <p class="subtitle">Una raccolta di articoli organizzati per topic e lingua</p>
+            <h1>All you need is thought</h1>
+            <p class="subtitle">Una raccolta di testicoli variegati (intesi come piccoli testi, naturalmente)</p>
         </div>
     </header>
 
